// file: pkg/queue/proto/cluster_stats.proto
// version: 1.0.0
// guid: 6318f554-f8e9-434a-a33f-84ab2582e93c

edition = "2023";

package gcommon.v1.queue;

import "google/protobuf/go_features.proto";

import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/queue/proto";

/**
 * Statistics for the entire cluster.
 */
message ClusterStats {
  // Total number of queues across all nodes
  int64 total_queues = 1;

  // Total number of messages across all queues
  int64 total_messages = 2;

  // Total throughput (messages per second)
  double total_throughput = 3;

  // Number of active connections
  int64 active_connections = 4;
}
